Use java.ext.dirs to avoid long classpath.
git-svn-id: http://unused-160-33.aus.redhat.com/svn/penrose-server/branches/1.0@575 04c32f3d-caf7-0310-9fe0-d49f5cee804d