@@ -50,8 +50,6 @@ goto end
 :checkJava
 set _JAVACMD=%JAVACMD%
 set LOCALCLASSPATH=%CLASSPATH%;%JAVA_HOME%\lib\tools.jar
-for %%i in ("%PENROSE_HOME%\lib\*.jar") do call "%PENROSE_HOME%\bin\lcp.bat" %%i
-for %%i in ("%PENROSE_HOME%\lib\ext\*.jar") do call "%PENROSE_HOME%\bin\lcp.bat" %%i
 
 if "%JAVA_HOME%" == "" goto noJavaHome
 if not exist "%JAVA_HOME%\bin\java.exe" goto noJavaHome
@@ -66,16 +64,17 @@ echo.
 
 :runPenrose
 
-set LOCALCLASSPATH=%PENROSE_HOME%\conf;%LOCALCLASSPATH%
+set LOCALLIBPATH=%PENROSE_HOME%\lib;%PENROSE_HOME%\lib\ext;%PENROSE_HOME%\schema\ext
 
 cd %PENROSE_HOME%
 
-"%_JAVACMD%" %PENROSE_DEBUG_OPTS% %PENROSE_OPTS% -classpath "%LOCALCLASSPATH%" -Dpenrose.home="%PENROSE_HOME%" org.safehaus.penrose.cache.CacheManager %PENROSE_ARGS% %PENROSE_CMD_LINE_ARGS%
+"%_JAVACMD%" %PENROSE_DEBUG_OPTS% %PENROSE_OPTS% -classpath "%LOCALCLASSPATH%" -Djava.ext.dirs="%LOCALLIBPATH%" -Dpenrose.home="%PENROSE_HOME%" org.safehaus.penrose.cache.CacheManager %PENROSE_ARGS% %PENROSE_CMD_LINE_ARGS%
 goto end
 
 
 :end
 set LOCALCLASSPATH=
+set LOCALLIBPATH=
 set _JAVACMD=
 set PENROSE_CMD_LINE_ARGS=
 
